# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [2.23.0] - 2025-05-20

### Added
- resource calculation for ML (AXO and TOPO) calculation instances.

## [2.22.0] - 2025-05-16

### Added
- Instanciate only one AXO/TOPO calculation per module to reduce resources.
  Fixed AXO algos to module 1, TOPO algos to module 2 by default.
- Support for Pyton 3.13.

### Changed
- Replaced flake8/pylint by ruff (#58).

### Removed
- Dropped support for Python < 3.9.

## [2.21.1] - 2025-05-14

### Fixed
- checking module range for constraints.
- ascending algorithm sorting for logs.

## [2.21.0] - 2025-03-20

### Added
- AXO model "v5" to resource_default.json.

## [2.20.2] - 2024-11-04

### Fixed
- Added compatibility for Pyton 3.12 (#59).

## [2.20.1] - 2024-08-12

### Changed
- added "htmhf" in template signal_condition.vhd for "TOPO" (#56).

## [2.20.0] - 2024-07-04

### Added
- TOPO model "base_v1" and AXO model "v4" in resource_default.json.

### Changed
- template for AXO instances (added input "htmhf")

### Removed
- unused templates (anomaly_detection.vhd and topo_trigger.vhd).

## [2.19.0] - 2024-05-16

### Added
- support for HTMHF.
- support for comb function with more than 4 objects.

### Changed
- depending on tm-python 0.13.0 (#49).
- depending on tm-reporter 2.13.0 (#49).

## [2.18.1] - 2024-06-06

### Added
- validation of ETA and INDEX cut ranges (#53).

## [2.18.0] - 2024-03-22

### Added
- calculation of hash sum of source code (#48).

### Changed
- updated VHDL templates (#48).

## [2.17.1] - 2024-02-28

### Fixed
- incorrect CScore value (#46).

## [2.17.0] - 2024-02-20

### Changed
- ADT implementation and AXO (AXOL1TL) with models.
- merged `main` into `__main__` module.

### Added
- CICADA and TOPO with models implementation.